migrating latest fixes. updating templates for firebase dynamic system.

--- a/_kit-specific-html/adForm/index.html
+++ b/_kit-specific-html/adForm/index.html
@@ -39,6 +39,7 @@
 <script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
 <script type="text/javascript" src="js/vendor/DynamicAd.js"></script> <!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/vendor/DataManager.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
+<script type="text/javascript" src="js/vendor/DynamicTemplate.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/vendor/DynamicBootloader.js"></script>
 <!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/svglib.js"></script>
@@ -54,8 +55,8 @@
     var dataManager = DataManager();
     var downloadPreview = false;
     var previewNumber = 1;
-    var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
-    var projectId = "000_Dynamic_Ad_Template";
+    var sheetId = "1lM5IZu_bPKaS3qjBFPoPxZ15oqVx7-V6qPoWK7karls";
+    var projectId = "000_test_ad";
     // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
   } catch (err) {
     console.log('Dynamics Engine Not Included, Proceed as standard');
